# anki-words-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  danish_deck.apkg  docker-compose.yaml  languages.yml  pyproject.toml  requirements.txt  verify_ids.py  verify_pagination.py
app/: config.py  main.py  models.py
app/auth/: auth.py
app/gradio/: interface.py
app/routes/: users.py
docs/: migration-plan-backend.md  migration-plan-frontend.md  migration-status.md  requirements.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.js  App.tsx  index.css  index.js  main.tsx  types.ts
notebooks/: 2025-06-06 new openai TTS.ipynb  anki_playground.ipynb  audio.ipynb  chatgpt_playground.ipynb  ddo_playground.ipynb  extract_from_anki.ipynb  gradio_playground.ipynb  manual_import.ipynb  my_custom_deck.apkg  postgres_playground.ipynb  tts_playground.ipynb
scripts/: import_legacy_db.py  setup_db_dirs.sh
src/: __init__.py  anki_creator.py  app.py  cli.py  main.py  requirements.txt  settings.py  setup.py
src/anki_integration/: anki_connect.py  flashcard_generator.py
src/anki_tools/: __init__.py  anki_deck_creator.py
src/api/: __init__.py  admin.py  cards.py  decks.py  dependencies.py  generate.py  profile.py  session.py  tags.py
src/api_clients/: google_translate.py  pronouncer.py  sentence_generator.py  translator.py  tts_pronunciation.py  wiktionary_scraper.py
src/apis/: google_tts.py
src/chatgpt_tools/: __init__.py  prompts.py  tts.py
(+65 files in other folders)
