[project]
name = "anki-words-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genanki>=0.13.1",
    "gradio>=5.39.0",
    "openai>=1.98.0",
    "psycopg2-binary>=2.9.10",
    "soundfile>=0.13.1",
]
