[project]
name = "anki-words-builder"
version = "0.1.0"
description = "Language-learning deck builder powered by FastAPI + templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "genanki>=0.13.1",
    "openai>=1.98.0",
    "soundfile>=0.13.1",
    "pydub>=0.25.1",
    "httpx>=0.28.0",
]
